; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/cifs/extr_cifs_dfs_ref.c_dump_referral.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/cifs/extr_cifs_dfs_ref.c_dump_referral.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dfs_info3_param = type { i32, i32, i32, i32, i32, i32 }

@.str = private unnamed_addr constant [18 x i8] c"DFS: ref path: %s\00", align 1
@.str.1 = private unnamed_addr constant [19 x i8] c"DFS: node path: %s\00", align 1
@.str.2 = private unnamed_addr constant [28 x i8] c"DFS: fl: %hd, srv_type: %hd\00", align 1
@.str.3 = private unnamed_addr constant [40 x i8] c"DFS: ref_flags: %hd, path_consumed: %hd\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.dfs_info3_param*)* @dump_referral to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @dump_referral(%struct.dfs_info3_param* %0) #0 {
  %2 = alloca %struct.dfs_info3_param*, align 8
  store %struct.dfs_info3_param* %0, %struct.dfs_info3_param** %2, align 8
  %3 = load %struct.dfs_info3_param*, %struct.dfs_info3_param** %2, align 8
  %4 = getelementptr inbounds %struct.dfs_info3_param, %struct.dfs_info3_param* %3, i32 0, i32 5
  %5 = load i32, i32* %4, align 4
  %6 = call i32 (i32, i8*, i32, ...) @cFYI(i32 1, i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str, i64 0, i64 0), i32 %5)
  %7 = load %struct.dfs_info3_param*, %struct.dfs_info3_param** %2, align 8
  %8 = getelementptr inbounds %struct.dfs_info3_param, %struct.dfs_info3_param* %7, i32 0, i32 4
  %9 = load i32, i32* %8, align 4
  %10 = call i32 (i32, i8*, i32, ...) @cFYI(i32 1, i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.1, i64 0, i64 0), i32 %9)
  %11 = load %struct.dfs_info3_param*, %struct.dfs_info3_param** %2, align 8
  %12 = getelementptr inbounds %struct.dfs_info3_param, %struct.dfs_info3_param* %11, i32 0, i32 3
  %13 = load i32, i32* %12, align 4
  %14 = load %struct.dfs_info3_param*, %struct.dfs_info3_param** %2, align 8
  %15 = getelementptr inbounds %struct.dfs_info3_param, %struct.dfs_info3_param* %14, i32 0, i32 2
  %16 = load i32, i32* %15, align 4
  %17 = call i32 (i32, i8*, i32, ...) @cFYI(i32 1, i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str.2, i64 0, i64 0), i32 %13, i32 %16)
  %18 = load %struct.dfs_info3_param*, %struct.dfs_info3_param** %2, align 8
  %19 = getelementptr inbounds %struct.dfs_info3_param, %struct.dfs_info3_param* %18, i32 0, i32 1
  %20 = load i32, i32* %19, align 4
  %21 = load %struct.dfs_info3_param*, %struct.dfs_info3_param** %2, align 8
  %22 = getelementptr inbounds %struct.dfs_info3_param, %struct.dfs_info3_param* %21, i32 0, i32 0
  %23 = load i32, i32* %22, align 4
  %24 = call i32 (i32, i8*, i32, ...) @cFYI(i32 1, i8* getelementptr inbounds ([40 x i8], [40 x i8]* @.str.3, i64 0, i64 0), i32 %20, i32 %23)
  ret void
}

declare dso_local i32 @cFYI(i32, i8*, i32, ...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
